syntax = "proto3";
package encryptionpb;
option go_package = "github.com/Anthony-Bible/password-exchange/protos/encryption";

message PlainMessage{
  string Email = 1;
  string FirstName  = 2;
  string OtherFirstName = 3 ;
  string OtherLastName = 4;
  string OtherEmail = 5;
  string Uniqueid = 6;
  string Content = 7;
}
message EncryptedMessage{
  string Email = 1;
  string FirstName  = 2;
  string OtherFirstName = 3 ;
  string OtherLastName = 4;
  string OtherEmail = 5;
  string Uniqueid = 6;
  string Content = 7;


}
service messageService{
  rpc encryptMessage(PlainMessage) returns (EncryptedMessage) {}
}
